--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea/
+*.iml
+build/
+.gradle/
+*.log
+*.tmp
+
 
 ### Eclipse ###
 .apt_generated
